Bug 182552 - Crash in the configuration window for the view appearance (mails list)
Summary: Crash in the configuration window for the view appearance (mails list)
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2009-01-31 10:54 UTC by Vivien Mallet
Modified: 2009-06-06 06:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vivien Mallet 2009-01-31 10:54:58 UTC
Version:           1.11.0 (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

1- Just above the mails list, there is the configuration button with the tooltip "Select View Appearance (Theme)". Click on it and choose "Configure...".
2- Then choose the tab "Appearance".
3- Below the "content items", there is a box where the mail line is described (message group, sender, date, etc.). Right-click in that box in an empty location (so, below the line description). If you have never clicked on the line description during your session with KMail, it will simply crash, and Kontact with it.
Comment 1 Dario Andres 2009-01-31 13:15:49 UTC
As you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? 
You need to install the kdepim-dbg package
Thanks :)
Comment 2 Vivien Mallet 2009-01-31 15:25:46 UTC
I installed kdepim-dbg and below is what I get:

Application: Kontact (kontact), signal SIGSEGV
0x00007f7d1a26d621 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 14693)]

Thread 3 (Thread 0x42430950 (LWP 14694)):
#0  0x00007f7d1775855d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f7d1ad4e327 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007f7d1ad44509 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f7d1ad4d362 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f7d177543ea in start_thread () from /lib/libpthread.so.0
#5  0x00007f7d1a2abc6d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x4152b950 (LWP 14695)):
#0  0x00007f7d1775855d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f7d1ad4e327 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007f7d1ad44509 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f7d1ad4d362 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f7d177543ea in start_thread () from /lib/libpthread.so.0
#5  0x00007f7d1a2abc6d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f7d206266f0 (LWP 14693)):
[KCrash Handler]
#5  KMail::MessageListView::Core::ThemePreviewWidget::mousePressEvent (this=0x1bb6ce0, e=0x7fff28661340) at /build/buildd/kdepim-4.2.0/kmail/messagelistview/core/themeeditor.cpp:954
#6  0x00007f7d1ba2230f in QWidget::event () from /usr/lib/libQtGui.so.4
#7  0x00007f7d1be478fd in QAbstractItemView::viewportEvent () from /usr/lib/libQtGui.so.4
#8  0x00007f7d1be7c530 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#9  0x00007f7d1ae35038 in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#10 0x00007f7d1b9cfc0c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#11 0x00007f7d1b9d822a in QApplication::notify () from /usr/lib/libQtGui.so.4
#12 0x00007f7d1cd063eb in KApplication::notify (this=0x7fff28662180, receiver=0x1baf6c0, event=0x7fff28661340) at /build/buildd/kde4libs-4.2.0/kdeui/kernel/kapplication.cpp:307
#13 0x00007f7d1ae35d61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#14 0x00007f7d1b9d75c8 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#15 0x00007f7d1ba3bbe9 in ?? () from /usr/lib/libQtGui.so.4
#16 0x00007f7d1ba3a607 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#17 0x00007f7d1ba622c4 in ?? () from /usr/lib/libQtGui.so.4
#18 0x00007f7d14b8dd3b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#19 0x00007f7d14b9150d in ?? () from /usr/lib/libglib-2.0.so.0
#20 0x00007f7d14b916cb in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#21 0x00007f7d1ae5e15f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#22 0x00007f7d1ba61a6f in ?? () from /usr/lib/libQtGui.so.4
#23 0x00007f7d1ae34682 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#24 0x00007f7d1ae3480d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#25 0x00007f7d1ae36cbd in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#26 0x0000000000404a15 in main (argc=1, argv=0x7fff28662868) at /build/buildd/kdepim-4.2.0/kontact/src/main.cpp:218

Comment 3 Christophe Marin 2009-02-01 14:47:37 UTC
Confirmed in trunk.

Application: KMail (kmail), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[Current thread is 1 (Thread 0xb3bf5700 (LWP 26561))]

Thread 2 (Thread 0xb01dcb90 (LWP 9553)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb5ce23e1 in select () from /lib/libc.so.6
#2  0xb6ae7827 in QProcessManager::run (this=0x8079388) at io/qprocess_unix.cpp:300
#3  0xb6a154de in QThreadPrivate::start (arg=0x8079388) at thread/qthread_unix.cpp:184
#4  0xb69b41b5 in start_thread () from /lib/libpthread.so.0
#5  0xb5ce938e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb3bf5700 (LWP 26561)):
[KCrash Handler]
#6  0xb78277a6 in KMail::MessageListView::Core::Item::type (this=0xff9abfeb) at /home/krop/kde/src/KDE/kdepim/kmail/messagelistview/core/item.h:124
#7  0xb786f333 in KMail::MessageListView::Core::ThemePreviewWidget::mousePressEvent (this=0x8d6c7e0, e=0xbfcd15d8) at /home/krop/kde/src/KDE/kdepim/kmail/messagelistview/core/themeeditor.cpp:954
#8  0xb60167b6 in QWidget::event (this=0x8d6c7e0, event=0xbfcd15d8) at kernel/qwidget.cpp:7490
#9  0xb63d11c3 in QFrame::event (this=0x8d6c7e0, e=0xbfcd15d8) at widgets/qframe.cpp:554
#10 0xb647120f in QAbstractScrollArea::viewportEvent (this=0x8d6c7e0, e=0xb6bfe901) at widgets/qabstractscrollarea.cpp:957
#11 0xb6522e07 in QAbstractItemView::viewportEvent (this=0x8d6c7e0, event=0xbfcd15d8) at itemviews/qabstractitemview.cpp:1461
#12 0xb655d974 in QTreeView::viewportEvent (this=0x8d6c7e0, event=0xbfcd15d8) at itemviews/qtreeview.cpp:1252
#13 0xb6473815 in QAbstractScrollAreaFilter::eventFilter (this=0x8d6e098, o=0x8d6cf08, e=0xbfcd15d8) at widgets/qabstractscrollarea_p.h:95
#14 0xb6b08fca in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x807b748, receiver=0x8d6cf08, event=0xbfcd15d8) at kernel/qcoreapplication.cpp:710
#15 0xb5fbfaaa in QApplicationPrivate::notify_helper (this=0x807b748, receiver=0x8d6cf08, e=0xbfcd15d8) at kernel/qapplication.cpp:4043
#16 0xb5fc8701 in QApplication::notify (this=0xbfcd1e28, receiver=0x8d6cf08, e=0xbfcd15d8) at kernel/qapplication.cpp:3749
#17 0xb7eb93fd in KApplication::notify(QObject*, QEvent*) () from /usr/share/qt4/lib/libkdeui.so.5
#18 0xb6b09dbb in QCoreApplication::notifyInternal (this=0xbfcd1e28, receiver=0x8d6cf08, event=0xbfcd15d8) at kernel/qcoreapplication.cpp:594
#19 0xb5fc775e in QApplicationPrivate::sendMouseEvent (receiver=0x8d6cf08, event=0xbfcd15d8, alienWidget=0x8d6cf08, nativeWidget=0x8ae6500, buttonDown=0xb684ba00, lastMouseReceiver=@0xb684ba04)
    at ../../src/corelib/kernel/qcoreapplication.h:211
#20 0xb60373c6 in QETWidget::translateMouseEvent (this=0x8ae6500, event=0xbfcd1c1c) at kernel/qapplication_x11.cpp:4409
#21 0xb60366ff in QApplication::x11ProcessEvent (this=0xbfcd1e28, event=0xbfcd1c1c) at kernel/qapplication_x11.cpp:3405
#22 0xb605f9f9 in QEventDispatcherX11::processEvents (this=0x8079938, flags={i = -1077076808}) at kernel/qeventdispatcher_x11.cpp:127
#23 0xb6b083da in QEventLoop::processEvents (this=0xbfcd1d30, flags={i = -1077076744}) at kernel/qeventloop.cpp:144
#24 0xb6b0881a in QEventLoop::exec (this=0xbfcd1d30, flags={i = -1077076680}) at kernel/qeventloop.cpp:195
#25 0xb6b0ac19 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:872
#26 0xb5fbf947 in QApplication::exec () at kernel/qapplication.cpp:3522
#27 0x0804b559 in main (argc=3, argv=0xbfcd1f04) at /home/krop/kde/src/KDE/kdepim/kmail/main.cpp:146

Comment 4 itsjustarumour 2009-02-09 04:58:12 UTC
Also confirming same problem on Kubuntu Intrepid 8.10 (32-bit) using KDE 4.2.00 and KMail 1.11.0.


QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#12 0xb6829d85 in ?? () from /usr/lib/libQtGui.so.4
#13 0xb617104a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#14 0xb64018ca in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#15 0xb640a0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb7f01fed in KApplication::notify (this=0xbfde4e68, receiver=0x9e3fd88, event=0xbfde4528) at /build/buildd/kde4libs-4.2.0/kdeui/kernel/kapplication.cpp:307
#17 0xb6171e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#18 0xb640936e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#19 0xb6473656 in ?? () from /usr/lib/libQtGui.so.4
#20 0xb64729e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#21 0xb649c7aa in ?? () from /usr/lib/libQtGui.so.4
#22 0xb47ba6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#23 0xb47bdda3 in ?? () from /usr/lib/libglib-2.0.so.0
#24 0xb47bdf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#25 0xb619c478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb649bea5 in ?? () from /usr/lib/libQtGui.so.4
#27 0xb617052a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#28 0xb61706ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#29 0xb6172da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#30 0xb6401767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#31 0x0804a7a0 in main (argc=0, argv=0x0) at /build/buildd/kdepim-4.2.0/kmail/main.cpp:146
Comment 5 itsjustarumour 2009-02-09 05:01:11 UTC
Edit, apologies - first few lines didn't paste:

Application: KMail (kmail), signal SIGSEGV

Thread 1 (Thread 0xb403b6c0 (LWP 11986)):
[KCrash Handler]
#6  KMail::MessageListView::Core::ThemePreviewWidget::mousePressEvent (this=0x9d47f00, e=0xbfde4528) at /build/buildd/kdepim-4.2.0/kmail/messagelistview/core/themeeditor.cpp:954
#7  0xb6459949 in QWidget::event () from /usr/lib/libQtGui.so.4
#8  0xb6790fd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#9  0xb68277df in QAbstractScrollArea::viewportEvent () from /usr/lib/libQtGui.so.4
#10 0xb68d2ccf in QAbstractItemView::viewportEvent () from /usr/lib/libQtGui.so.4
#11 0xb690a9e4 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#12 0xb6829d85 in ?? () from /usr/lib/libQtGui.so.4
#13 0xb617104a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#14 0xb64018ca in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#15 0xb640a0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb7f01fed in KApplication::notify (this=0xbfde4e68, receiver=0x9e3fd88, event=0xbfde4528) at /build/buildd/kde4libs-4.2.0/kdeui/kernel/kapplication.cpp:307
#17 0xb6171e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#18 0xb640936e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#19 0xb6473656 in ?? () from /usr/lib/libQtGui.so.4
#20 0xb64729e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#21 0xb649c7aa in ?? () from /usr/lib/libQtGui.so.4
#22 0xb47ba6f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#23 0xb47bdda3 in ?? () from /usr/lib/libglib-2.0.so.0
#24 0xb47bdf61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#25 0xb619c478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb649bea5 in ?? () from /usr/lib/libQtGui.so.4
#27 0xb617052a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#28 0xb61706ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#29 0xb6172da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#30 0xb6401767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#31 0x0804a7a0 in main (argc=0, argv=0x0) at /build/buildd/kdepim-4.2.0/kmail/main.cpp:146
Comment 6 Christophe Marin 2009-04-24 11:27:15 UTC
Fresh BT :


Application: KMail (kmail), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[Current thread is 1 (Thread 0xb3b78700 (LWP 4853))]

Thread 1 (Thread 0xb3b78700 (LWP 4853)):
[KCrash Handler]
#6  KMail::MessageListView::Core::Item::type (this=0x9082970) at /home/krop/kde/src/KDE/kdepim/kmail/messagelistview/core/item.h:123
#7  0xb6116bf6 in QWidget::event (this=0x9082970, event=0xbfda1378) at kernel/qwidget.cpp:7512
#8  0xb64d30a3 in QFrame::event (this=0x9082970, e=0xbfda1378) at widgets/qframe.cpp:559
#9  0xb657318f in QAbstractScrollArea::viewportEvent (this=0x9082970, e=0x9082970) at widgets/qabstractscrollarea.cpp:962
#10 0xb6624d97 in QAbstractItemView::viewportEvent (this=0x9082970, event=0xbfda1378) at itemviews/qabstractitemview.cpp:1466
#11 0xb665f974 in QTreeView::viewportEvent (this=0x9082970, event=0xbfda1378) at itemviews/qtreeview.cpp:1257
#12 0xb6575795 in QAbstractScrollAreaFilter::eventFilter (this=0x8c3b3f0, o=0x9082de8, e=0xbfda1378) at widgets/qabstractscrollarea_p.h:100
#13 0xb6c0ebea in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x8218ea8, receiver=0x9082de8, event=0xbfda1378) at kernel/qcoreapplication.cpp:718
#14 0xb60bfeca in QApplicationPrivate::notify_helper (this=0x8218ea8, receiver=0x9082de8, e=0xbfda1378) at kernel/qapplication.cpp:4080
#15 0xb60c8b21 in QApplication::notify (this=0xbfda1d18, receiver=0x9082de8, e=0xbfda1378) at kernel/qapplication.cpp:3786
#16 0xb7e80b3d in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0xb6c0f9db in QCoreApplication::notifyInternal (this=0xbfda1d18, receiver=0x9082de8, event=0xbfda1378) at kernel/qcoreapplication.cpp:602
#18 0xb60c7b8e in QApplicationPrivate::sendMouseEvent (receiver=0x9082de8, event=0xbfda1378, alienWidget=0x9082de8, nativeWidget=0x9185cf8, buttonDown=0xb6950a20, lastMouseReceiver=@0xb6950a24)
    at ../../src/corelib/kernel/qcoreapplication.h:216
#19 0xb61378e6 in QETWidget::translateMouseEvent (this=0x9185cf8, event=0xbfda19bc) at kernel/qapplication_x11.cpp:4423
#20 0xb6136c27 in QApplication::x11ProcessEvent (this=0xbfda1d18, event=0xbfda19bc) at kernel/qapplication_x11.cpp:3419
#21 0xb61603ca in x11EventSourceDispatch (s=0x821b680, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#22 0xb43999a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#23 0xb439d063 in ?? () from /usr/lib/libglib-2.0.so.0
#24 0xb439d221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#25 0xb6c3b428 in QEventDispatcherGlib::processEvents (this=0x8214f88, flags={i = -1076225160}) at kernel/qeventdispatcher_glib.cpp:323
#26 0xb615fac5 in QGuiEventDispatcherGlib::processEvents (this=0x8214f88, flags={i = -1076225112}) at kernel/qguieventdispatcher_glib.cpp:202
#27 0xb6c0dffa in QEventLoop::processEvents (this=0xbfda1c20, flags={i = -1076225048}) at kernel/qeventloop.cpp:149
#28 0xb6c0e43a in QEventLoop::exec (this=0xbfda1c20, flags={i = -1076224984}) at kernel/qeventloop.cpp:200
#29 0xb6c108e9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#30 0xb60bfd67 in QApplication::exec () at kernel/qapplication.cpp:3553
#31 0x0804ab0a in main (argc=-1213958072, argv=0x90829d8) at /home/krop/kde/src/KDE/kdepim/kmail/main.cpp:146
Comment 7 Dario Andres 2009-05-24 00:13:54 UTC
Here using:

Qt: 4.5.1 (qt-copy  958974)
KDE: 4.2.87 (KDE 4.2.87 (KDE 4.3 >= 20090519))
kdelibs svn rev. 971894 / kdebase svn rev. 971894
kdepim svn rev. 971976
on ArchLinux i686 - Kernel 2.6.29.3

I can't reproduce the crash with the provided test steps.
Can anyone else confirm this ? Thanks
Comment 8 Christophe Marin 2009-05-24 01:23:07 UTC
(In reply to comment #7)
> I can't reproduce the crash with the provided test steps.
> Can anyone else confirm this ? Thanks


I can still reproduce it.
Comment 9 Dario Andres 2009-05-24 01:24:44 UTC
@Christophe: Are the steps still the same ? Thanks
Comment 10 Christophe Marin 2009-05-24 09:50:47 UTC
(In reply to comment #9)
> @Christophe: Are the steps still the same ? Thanks

Yes, exactly the same as in comment #0.
Comment 11 itsjustarumour 2009-05-25 00:00:37 UTC
I can confirm I'm still seeing the same behaviour on KMail Version 1.11.2, on a fresh install of Ubuntu 9.04 (GNOME desktop environment)


Application: KMail (kmail), signal SIGSEGV

Thread 1 (Thread 0xb3c00b40 (LWP 6017)):
[KCrash Handler]
#5  0xb7741b40 in ?? () from /usr/lib/libkmailprivate.so.4
#6  0xb61cec46 in QWidget::event () from /usr/lib/libQtGui.so.4
#7  0xb65a8993 in QFrame::event () from /usr/lib/libQtGui.so.4
#8  0xb664894f in QAbstractScrollArea::viewportEvent () from /usr/lib/libQtGui.so.4
#9  0xb66fa647 in QAbstractItemView::viewportEvent () from /usr/lib/libQtGui.so.4
#10 0xb67350c4 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#11 0xb664af55 in ?? () from /usr/lib/libQtGui.so.4
#12 0xb5ec9c5a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#13 0xb6177e7a in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#14 0xb6180b11 in QApplication::notify () from /usr/lib/libQtGui.so.4
#15 0xb7dce94d in KApplication::notify () from /usr/lib/libkdeui.so.5
#16 0xb5ecaa3b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#17 0xb617fb7e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#18 0xb61ef97e in ?? () from /usr/lib/libQtGui.so.4
#19 0xb61eeca7 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#20 0xb6219c6a in ?? () from /usr/lib/libQtGui.so.4
#21 0xb4302b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0xb43060eb in ?? () from /usr/lib/libglib-2.0.so.0
#23 0xb4306268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0xb5ef6438 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#25 0xb6219365 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb5ec906a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#27 0xb5ec94aa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#28 0xb5ecb959 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#29 0xb6177d17 in QApplication::exec () from /usr/lib/libQtGui.so.4
#30 0x0804a7a0 in _start ()
Comment 12 Szymon Stefanek 2009-06-06 06:53:38 UTC
SVN commit 978105 by stefanek:

Make sure that Delegate::hitItem() doesn't return
bogus values when the hitTest() fails very early.

BUG: 182552





 M  +5 -0      themedelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978105