Make sure that Delegate::hitItem() doesn't return bogus values when the hitTest() fails very early.

BUG: 182552




svn path=/trunk/KDE/kdepim/; revision=978105